# CoDrone

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTIC_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  DEMO.md  DEMO_GUIDE.md  MVP_QUICKSTART.md  Makefile  PROJECT_SUMMARY.md  README-VERCEL-MIGRATION.md  README.md  SECURITY.md  bandit-report.json  demo_report_generation.py  docker-compose.dev.yml  docker-compose.yml  dump.rdb  mypy.ini  pyproject.toml  setup_testing.sh  testing_guide.md
.claude/agents/: prototype-developer.md
.cursor/contexts/: celery-setup.md  map-integration-tool.md  odm-processing-tool.md  report-generation.md  vercel-ai-sdk-migration.md  volume-measurement-tool.md
.cursor/roadmaps/: development-roadmap.md  mvp-photogrammetry-roadmap.md
.cursor/tasks/: task-board.md
.cursor/templates/: context-template.md  feature-planning.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api-server/: .env.example  Dockerfile  config.py  main.py  next.config.js  package-lock.json  package.json  report_management.py  requirements-dev.txt  requirements.txt  tsconfig.json
apps/api-server/app/: page.tsx
apps/api-server/app/api/boundary-suggestions/: route.ts
apps/api-server/app/api/chat/: route.ts
apps/api-server/app/api/export/kml/: route.ts
apps/api-server/app/api/files/: route.ts
apps/api-server/app/api/mission-planning/: route.ts
apps/api-server/app/api/parameter-optimization/: route.ts
apps/api-server/app/api/sessions/: route.ts
apps/api-server/app/api/spatial/area/: route.ts
apps/api-server/app/api/spatial/elevation/: route.ts
apps/api-server/app/api/spatial/volume/: route.ts
apps/api-server/app/api/upload/: route.ts
apps/api-server/app/api/weather/: route.ts
apps/api-server/app/types/: chat.ts  spatial.ts  tools.ts
apps/frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  FileUpload.tsx  MapComponent.tsx  MapErrorBoundary.tsx  MissionPlannerMap.tsx  MissionPlanningDemo.tsx  MissionPlanningPanel.tsx  ReportBuilder.tsx  ToolCallView.tsx  TypingIndicator.tsx  VolumeResultsView.tsx
apps/frontend/src/components/layout/: AppLayout.tsx  ChatPanel.tsx  MainContent.tsx  Sidebar.tsx
apps/frontend/src/components/report/: DroneComponents.ts  ReportPreview.tsx  ReportTemplates.tsx
apps/frontend/src/lib/: api.ts  utils.ts
apps/frontend/src/test/: setup.ts
apps/frontend/src/types/: index.ts  report.ts
backend/: Dockerfile  main.py  requirements.txt
backend/agent/: __init__.py  tools.py  workflow.py
backend/api/routes/: __init__.py  agent.py  auth.py  canvas.py  maps.py  projects.py  upload.py
backend/db/: database.py  models.py
backend/utils/: config.py  storage.py
data/jobs/: odm_job_20250729_233732.json
data/odm/: docker-compose.yml
data/storage/: .gitkeep
diagrams/: system-architecture.md
docs/: DEVELOPMENT.md  MIGRATION.md  PROJECT_SUMMARY.md  README.md  TESTING.md  VERCEL_AI_SDK_CHEATSHEET.md  VERCEL_AI_SDK_TEST_SUMMARY.md
docs/development/: AGENTIC_DEVELOPMENT.md  AGENTIC_QUICKSTART.md  DEVELOPMENT_STRATEGY.md  VERCEL_AI_SDK_MIGRATION_PLAN.md
docs/project-standards/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/user-guides/: DEMO.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: Agent.jsx  Canvas.jsx  Dashboard.jsx  Login.jsx  Map.jsx  NotFound.jsx  ProjectDetail.jsx  Projects.jsx  Register.jsx  Upload.jsx
scripts/: demo.py  dev-fast.sh  setup-mvp.sh  setup.sh  start-mvp.sh  start-vercel-migration.sh  start.sh  test-mission-planning.sh  verify-setup.sh
test-vercel-ai-sdk/: README.md  package-lock.json  package.json
test-vercel-ai-sdk/src/app/: page.tsx
test-vercel-ai-sdk/src/app/api/chat/: route.ts
tests/: __init__.py  conftest.py  test_basic.py  test_processing_tools.py  test_spatial_tools.py  test_volume_measurement_basic.py  test_volume_measurement_integration.py
